# lfd_vision

./: .gitignore  CMakeLists.txt  README.md  blob_usbcam2f1_l.yaml  blob_usbcam2f1_r.yaml  mainpage.dox  manifest.xml
config/: ext_usbcam1.yaml  sentis_tof_m100_1.yaml  usb_cams2f.yaml  usb_cams4g.yaml  usbcam2f1.yaml  usbcam2s1.yaml  usbcam2s1_stereo.yaml  usbcam2s2.yaml  usbcam2s2_stereo.yaml  usbcam2s2f.yaml  usbcam2s2f_stereo.yaml  usbcam4g1.yaml  usbcam4g1_stereo.yaml
include/lfd_vision/: blob_tracker.h  color_detector.h  cyl_detector.h  edge_fit.h  flow_analyzer.h  flow_finder.h  optimizer.h  usb_stereo.h  vision_util.h
include/lfd_vision/raytrace/: depthscene.h
include/pr2_lfd_trick/: color_detector.h  cyl_detector.h
include/pr2_lfd_vision/: color_detector.h  cyl_detector.h  flow_analyzer.h  flow_finder.h  geom_util.h  mov_detector.h  ode_grpour_sim.h  ode_pour_sim.h  pcl_util.h  sentis_m100.h  vision_util.h
include/pr2_lfd_vision/raytrace/: depthscene.h  pose_estimator.h
launch/: ar_track_ext_xtion.launch  color_detector.launch  color_detector2.launch  depth_detector.launch  gz_pr2_sim.launch  human_demo.launch  human_demo_l.launch  ode_grpour_sim1.launch  ode_grpour_sim_video.launch  ode_grpour_sim_video2.launch  rt_pose_estimator_both.launch  rt_pose_estimator_m100.launch  rt_pose_estimator_stereo.launch  rt_pose_estimator_stereo2s1.launch  rt_pose_estimator_stereo2s2.launch  rt_pose_estimator_xtion.launch  sentis_tof_m100.launch  sentis_tof_m100_2.launch  sentis_tof_m100_s.launch  usb_stereo_calib.launch  usb_stereo_calib2s1.launch  usb_stereo_calib2s2.launch  usb_stereo_calib2s2f.launch  usb_stereo_calib4g1.launch  usb_stereo_node.launch  usb_stereo_node2s1.launch  usb_stereo_node2s2.launch  usb_stereo_node2s2f.launch  visual_skin_2f1.launch  visual_skin_4g1.launch
models/robot/: gripper.yaml
msg/: ColDetSensor.msg  ColDetViz.msg  ColDetVizPrimitive.msg  IndexedBBEquation.msg  IndexedBoundingBox.msg  LabeledPoseOptReq.msg  LabeledPoseRevision.msg  ODEConfig.msg  ODESensor.msg
scripts/: analyze_dat.py  core_tool.py  cuiTool.py  cui_tool.py  flow_logger.py  flow_logger_depth.py  human_demo_logger.py  infer_analyzer.py  replay_setup.py  sm_log_analyzer.py  test_edge_fit.py
scripts/motions/: m_attr.py  m_backtog.py  m_bpmap.py  m_calib2.py  m_flowc.py  m_flowc_cmn.py  m_flowc_gen.py  m_flowc_shake2.py  m_flowc_shakeB.py  m_flowc_shakeB2.py  m_flowc_shakeC.py  m_flowc_sm.py  m_flowc_sm_old.py  m_flowc_tap.py  m_flowc_test.py  m_flowcs.py  m_grab.py  m_help.py  m_infer.py  m_init0.py  m_initc.py  m_initcmw.py  m_manmv.py  m_mtrack.py  m_objlocal.py  m_objs.py  m_objs2.py  m_pour.py  m_pour2.py  m_pregrab.py  m_prepour.py  m_release.py  m_setbp.py  m_template.py  m_test.py  m_test2.py  m_test3.py  m_test_sm.py  m_test_yaml.py  m_vibrate.py
src/: blob_tracker.cpp  cma.py  color_detector.cpp  color_detector_node.cpp  cv_usb_node.cpp  cyl_detector.cpp  cyl_detector_node.cpp  depth_detector_node.cpp  edge_fit.cpp  flow_analyzer.cpp  flow_analyzer_node.cpp  flow_finder.cpp  mov_detector.cpp  ode_grpour_sim.cpp  ode_grpour_sim_node.cpp  ode_pour_sim.cpp  ode_pour_sim_node.cpp  optimizer.cpp  pcl_util.cpp  rt_pose_estimator_node.cpp  sentis_m100.cpp  sentis_m100_node.cpp  state_machine.py  state_machine_paa.py  usb_stereo.cpp  usb_stereo_node.cpp  vision_util.cpp  visual_skin_node.cpp
src/raytrace/: depthscene.cpp  pose_estimator.cpp
srv/: FitEdge.srv  ODEGetConfig.srv  ODEReset2.srv  RTLabeledPoseOpt.srv  SetBBEquation.srv  SetBoundingBox.srv
test/: flow_a_test.py  grab_pose_est.py  test_col_flow.cpp
urdf/: m100_clamp_mount.urdf.xacro  pr2_moveit_planning_context.launch  pr2_w_m100.urdf.xacro  upload_pr2_m100.launch
